--- a/backend/zapcontrol/core/templates/core/base.html
+++ b/backend/zapcontrol/core/templates/core/base.html
@@ -15,6 +15,8 @@
             <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
             <li class="nav-item"><a class="nav-link" href="/setup">Setup</a></li>
             <li class="nav-item"><a class="nav-link" href="/api/version">API Version</a></li>
+            <li class="nav-item"><a class="nav-link" href="/ops/overview">Ops Overview</a></li>
+            <li class="nav-item"><a class="nav-link" href="/ops/actions">Ops Actions</a></li>
           </ul>
           <div class="d-flex text-white">
             {% if request.user.is_authenticated %}
