--- a/backend/zapcontrol/core/templates/core/base.html
+++ b/backend/zapcontrol/core/templates/core/base.html
@@ -17,6 +17,8 @@
             <li class="nav-item"><a class="nav-link" href="/api/version">API Version</a></li>
             <li class="nav-item"><a class="nav-link" href="/ops/overview">Ops Overview</a></li>
             <li class="nav-item"><a class="nav-link" href="/zapnodes">ZAP Nodes</a></li>
+            <li class="nav-item"><a class="nav-link" href="/profiles">Profiles</a></li>
+            <li class="nav-item"><a class="nav-link" href="/scans">Scans</a></li>
             <li class="nav-item"><a class="nav-link" href="/ops/actions">Ops Actions</a></li>
           </ul>
           <div class="d-flex text-white">
