--- a/backend/zapcontrol/core/templates/core/base.html
+++ b/backend/zapcontrol/core/templates/core/base.html
@@ -19,6 +19,7 @@
             <li class="nav-item"><a class="nav-link" href="/zapnodes">ZAP Nodes</a></li>
             <li class="nav-item"><a class="nav-link" href="/profiles">Profiles</a></li>
             <li class="nav-item"><a class="nav-link" href="/scans">Scans</a></li>
+            <li class="nav-item"><a class="nav-link" href="/reports">Reports</a></li>
             <li class="nav-item"><a class="nav-link" href="/ops/actions">Ops Actions</a></li>
           </ul>
           <div class="d-flex text-white">
