--- a/backend/zapcontrol/core/templates/core/zapnodes.html
+++ b/backend/zapcontrol/core/templates/core/zapnodes.html
@@ -8,6 +8,7 @@
   <form method="post">
     {% csrf_token %}
     <input type="hidden" name="action" value="test_all_nodes">
+    <input type="password" name="password" class="form-control form-control-sm d-inline-block w-auto" placeholder="Confirm password" required>
     <button class="btn btn-outline-primary">Test all nodes</button>
   </form>
 </div>
@@ -21,6 +22,7 @@
       <div class="col-md-3"><input class="form-control" name="name" placeholder="Name" required></div>
       <div class="col-md-5"><input class="form-control" name="base_url" placeholder="http://zap-node:8090" required></div>
       <div class="col-md-3"><input class="form-control" name="api_key" placeholder="API key (optional)"></div>
+      <div class="col-md-2"><input type="password" class="form-control" name="password" placeholder="Confirm password" required></div>
       <div class="col-md-1"><button class="btn btn-primary w-100">Add</button></div>
     </form>
   </div>
@@ -45,6 +47,7 @@
               {% csrf_token %}
               <input type="hidden" name="action" value="test_node">
               <input type="hidden" name="node_id" value="{{ node.id }}">
+              <input type="password" name="password" class="form-control form-control-sm" placeholder="Password" required>
               <button class="btn btn-sm btn-outline-primary">Test</button>
             </form>
             {% if node.managed_type == 'external' %}
@@ -52,6 +55,7 @@
               {% csrf_token %}
               <input type="hidden" name="action" value="remove_external">
               <input type="hidden" name="node_id" value="{{ node.id }}">
+              <input type="password" name="password" class="form-control form-control-sm" placeholder="Password" required>
               <button class="btn btn-sm btn-outline-danger">Remove</button>
             </form>
             {% endif %}
