--- a/backend/zapcontrol/core/templates/core/base.html
+++ b/backend/zapcontrol/core/templates/core/base.html
@@ -13,6 +13,7 @@
         <div class="collapse navbar-collapse show">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item"><a class="nav-link" href="/dashboard">Dashboard</a></li>
+            <li class="nav-item"><a class="nav-link" href="/management">Management</a></li>
             <li class="nav-item"><a class="nav-link" href="/setup">Setup</a></li>
             <li class="nav-item"><a class="nav-link" href="/api/version">API Version</a></li>
             <li class="nav-item"><a class="nav-link" href="/ops/overview">Ops Overview</a></li>
