--- a/backend/zapcontrol/core/templates/core/base.html
+++ b/backend/zapcontrol/core/templates/core/base.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}ZapControl{% endblock %}</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-      <script src="https://unpkg.com/htmx.org@1.9.12"></script>
+    <script src="https://unpkg.com/htmx.org@1.9.12"></script>
   </head>
   <body class="bg-light">
     <div class="container-fluid">
@@ -29,15 +29,16 @@
             <div class="text-uppercase small text-secondary mb-1">Administration</div>
             <ul class="nav flex-column small">
               <li class="nav-item text-white-50 p-1">Users Management</li>
-              <li class="nav-item"><a class="nav-link text-white ps-3 p-1" href="/management">Accounts: Users</a></li>
-              <li class="nav-item"><a class="nav-link text-white ps-3 p-1" href="/management">Authentication & Authorization: Groups</a></li>
-              <li class="nav-item text-white-50 p-1">Zap Nodes</li>
-              <li class="nav-item"><a class="nav-link text-white ps-3 p-1" href="/zapnodes">Targets: Zap nodes</a></li>
-              <li class="nav-item"><a class="nav-link text-white ps-3 p-1" href="/zapnodes">Internal ZAP pool</a></li>
-              <li class="nav-item text-white-50 p-1">Core</li>
-              <li class="nav-item"><a class="nav-link text-white ps-3 p-1" href="/setup">Settings: Database</a></li>
-              <li class="nav-item"><a class="nav-link text-white ps-3 p-1" href="/ops/logs/nginx">Ops audit logs: Audit</a></li>
-              <li class="nav-item"><a class="nav-link text-white p-1" href="/ops/overview">Ops Overview</a></li>
+              <li class="nav-item"><a class="nav-link text-white ps-3 p-1" href="/administration/users/">Users</a></li>
+              <li class="nav-item"><a class="nav-link text-white ps-3 p-1" href="/administration/groups/">Groups</a></li>
+
+              <li class="nav-item text-white-50 p-1 mt-1">Zap nodes</li>
+              <li class="nav-item"><a class="nav-link text-white ps-3 p-1" href="/administration/nodes/">Zap nodes</a></li>
+              <li class="nav-item"><a class="nav-link text-white ps-3 p-1" href="/administration/pools/">Internal ZAP pool</a></li>
+
+              <li class="nav-item text-white-50 p-1 mt-1">Core</li>
+              <li class="nav-item"><a class="nav-link text-white ps-3 p-1" href="/administration/settings/">Database</a></li>
+              <li class="nav-item"><a class="nav-link text-white ps-3 p-1" href="/administration/audit/">Audit</a></li>
             </ul>
           </div>
 
